next step forward

--- a/text/content.tex
+++ b/text/content.tex
@@ -1,24 +1,30 @@
 %% content.tex
 %%
 
-\chapter{Status Quo}
-In diesem Kapitel wollen wir den aktuellen Stand der Wissenschaft vorstellen. Hierbei beziehen wir uns auf das Thema Lernen und Online-Hilfe. Welches Wissen gibt es hierbei bereits und auf welchem Stand sind diese? Das wollen wir in diesem Kapitel klären, bevor es zu den Grundlagen dieser Arbeit kommt.
+\chapter{Stand der Forschung}
+In diesem Kapitel wollen wir den aktuellen Stand der Wissenschaft vorstellen. Hierbei beziehen wir uns auf das Thema Lernen. Welches Wissen gibt es hierbei bereits und auf welchem Stand sind diese? Das wollen wir in diesem Kapitel klären, bevor es zu den Grundlagen dieser Arbeit kommt.
 
 \section{Lernen}
-Das Thema Lernen ist ein wichtiger Bestandteil dieser Arbeit. Aus diesem Grund wollen wir uns bevor wir unsere Problemstellung einsteigen mit dem aktuellen Stand des Lernens befassen und den aktuellen Stand der Forschung zum Thema Lernen aufzeigen mit unseren in der Arbeit verwendeten Konzepten.
+Das Thema Lernen ist ein wichtiger Bestandteil dieser Arbeit. Aus diesem Grund wollen wir uns bevor wir unsere Problemstellung einsteigen mit dem aktuellen Stand des Lernens befassen, so dass bei unseren Lösungsansätzen das Lernen später besser begründet werden kann.
 
 
 \subsection{Problembasiertes Lernen}
-">Problem based Lerning (PBL) is a learner-centred approach for designing learning environments in authentic, ill-structured problems"< entnommen aus \cite{zumbachproblembasiertes}. \par
+"Problem based Lerning (PBL) is a learner-centred approach for designing learning environments in authentic, ill-structured problems" entnommen aus \cite{zumbachproblembasiertes}. \par
 
 Das Problembasierte Lernen, wie im Zitat deutlich wird, bezieht sich auf das Erarbeiten von selbstständigen Lösungsansätzen zum Lösen eines Problems. Der Lernende soll ein Thema selbstständig erarbeiten, ohne das jemand anderes einen Lösungsweg vorzeichnet. Auf dem Weg zu der Lösung eines Problems muss er evtl. mehrere Ansätze probieren um sein Ziel zu erreichen. Wie im Zitat bereits erwähnt steht der Lernende im Mittelpunkt. Der Lernende muss hierbei selbst die Initiative ergreifen. Ein Lehrer steht beim Lernprozess nur als Helfende Hand zur Seite. Er dient dabei lediglich als Coach, der evtl. aufkommende Fragen des Lernenden beantwortet und ihn in eine spezielle Richtung leitet, falls der Lernende nicht mehr weiterkommt. Beim Thema Software haben wir eine ähnliche Problemstellung. Ein möglicher Anwender kommt an einem Punkt in der Software nicht mehr weiter und muss selbstständig eine Lösung für das konkrete Problem finden. 
  
 \subsection{Differenzielles Lernen}
 Ein weitere Ansatz zum Thema Lernen gibt es in der Sporttheorie. Die Idee des differenziellen Lernens bezieht sich auf das Erlernen von Bewegungen im Sport. Beim differenziellen Lernen werden Bewegungen variiert. Beim Tischtennis beispielsweise wird ein Schlag auf verschiedene Wege durchgeführt. Hierbei werden vor allem Körperwinkel variiert. \footnote{Quelle: \cite{differenziellesLernen}} Es werden drei Bälle vom Lernenden gespielt und jede Bewegung sollte hierbei auf einem anderen Weg durchgeführt werden. Das Ziel dieser Form von Lernen ist es kein ideales Technikleitbild für eine Bewegung vorzugeben, also keine Lösung sondern die Bewegung so vielfältig wie möglich zu streuen. Wenn er dieses Training durchführt, dann kann ein Lernender in jeder Situation die korrekte Bewegung anwenden. Diese Form des Bewegungslernens ist sehr stark verwandt mit dem problembasierten Ansatz. Das Differenzielle Lernen gibt ebenfalls ein Problemstellung vor, die mit verschiedenen Lösungswegen gelöst werden soll. Der Unterschied hierbei besteht in der Vorgabe von Lösungsansätzen im Vergleich zum komplett selbständigen problematisierten Lernen.  Diese beiden Konzepte des Lernens wollen wir in dieser Arbeit für unsere Empfehlung verwenden.
 
+\section{Game-Based Learning}
+Ein wichtiger Stand der Wissenschaft zum Erlernen von neuen Dingen 
+
 
 \chapter{Grundlagen}
 Um ein besseres Verständnis dieser Arbeit zu gewährleisten, sind gewisse Grundlagen zu dem Thema erforderlich. Diese Begriffe werden nachfolgend noch einmal aufgeführt, definiert und in den Zusammenhang mit dieser Arbeit gesetzt. Beginnen möchten wir dabei mit dem Ersten der vier Begriffe, nämlich der Online-Lernhilfe.
+
+
+
 \section{Online-Lernhilfe}
 Wir werden eine kurze Begriffsdefinition geben und anschließend die Verwendung in unserer Arbeit erläutern. Dies hilft beim Verständnis des Problems.
 \subsection{Begriffsdefinition}
