--- a/text/introduction.tex
+++ b/text/introduction.tex
@@ -13,7 +13,10 @@ Dieser weise Spruch ist allgemein gültig. Jeder Mensch, sei es im Beruf oder im
 
 
 \section{CAS Campus}
-Die Zielsoftware, worauf unsere spätere Empfehlung basiert, ist die Software CAS Campus. Diese Software ist von der CAS Software AG aus Karlsruhe. Das Ziel der Software ist es einen kompletten Student-Lifecycle (siehe Abbildung \ref{img1:stdLife}) nachzubilden. Der Lifecycle beginnt mit der Bewerbung des Studenten an einer Hochschule und endet mit dem Alumni Zustand. Bevor er zu dem Alumni-Zustand kommt, muss er einige Stationen begleiten. Auf dem Weg zum Abschluss werden einige Prozesse durchlaufen und der Student hat sehr viel Verwaltungsaufwand zu erledigen. Weiterhin wird er mit vielen Personen während seines Studiums in Berührung kommen. Diese Prozesse und Vorgänge versucht die Software bestmöglich abzubilden, indem Sie mehrere Plattformen zur Verwaltung und Steuerung anbietet. Die Software wird von mehreren Personen an einer Hochschule verwendet. Diese Personas werden in Kapitel \ref{ch:Content1} weiter erläutert und vorgestellt. \footnote{Quelle: http://www.cas-education.de/fuer-hochschulen/cas-campus.html aufgerufen am 18.07.2015}
+Die Zielsoftware, worauf unsere spätere Empfehlung basiert, ist die Software CAS Campus. Diese Software ist von der CAS Software AG aus Karlsruhe. Das Ziel der Software ist es einen kompletten Student-Lifecycle (siehe Abbildung \ref{img1:stdLife}) nachzubilden. Der Lifecycle beginnt mit der Bewerbung des Studenten an einer Hochschule und endet mit dem Alumni Zustand\footnote{Quelle: http://cas-education.de entnommen am 27.07.15}. Bevor ein Student zu dem Alumni-Zustand kommt, muss er zuvor einige Stationen begleiten. Die Software CAS Campus soll den Studenten genau auf diesem Weg begleiten, indem alle Prozesse abgebildet werden. Die Prozesse sind hierbei sehr vielschichtig. Sie reichen vom einfachen Eintragen der Noten bis hin zu einer komplexen Modellierung von ganzen Studiengängen. Weitere Prozesse sind beispielsweise Terminmanagement. Hier müssen Vorlesungen zu Räumen zugeordnet werden und auf Konflikte bei der Belegung geprüft werden. Im Mittelpunkt dieser Prozesse steht immer der Student. Er ist sozusagen der Endkunde der Anwendung und steht im Zentrum eines modernen Campus-Management-Systems. \cite{becker2008a}\par
+
+
+
 \begin{figure}[ht]
 \begin{center}
 \includegraphics[width = 0.5\textwidth]{casCampus.png}
@@ -23,7 +26,7 @@ Die Zielsoftware, worauf unsere spätere Empfehlung basiert, ist die Software CA
 \end{figure} 
 
 \section{Motivation}
-Das Ziel dieser Arbeit ist es eine mögliche Lösung zu finden, wie eine adaptive Online-Lernhilfe aussehen kann. Hierzu müssen passende Konzepte gefunden werden. Wichtig hierbei ist die Zentrierung auf den Nutzer. Dieser ist der Kern der Arbeit und auf ihn soll sich später auch die Adaptivität der Lösung beziehen. 
+Das Ziel dieser Arbeit ist es, eine mögliche Lösung zu finden, wie eine adaptive Online-Lernhilfe aussehen kann. Hierzu müssen passende Lösungsansätze gefunden werden. Die Lösungsansätze müssen auf die Zielsoftware CAS Campus angewandt werden können, so dass eine spätere Implementierung der Lösung erfolgen kann.  Wichtig hierbei ist die Zentrierung auf den Nutzer. Diese Zentrierung wurde als Vorgabe zur Adaptivität der Lösung Vorgegeben und soll sich in allen Lösungsansätzen widerspiegeln.  
 
 \section{Weiteres Vorgehen}
 Im folgenden Text wird zuerst der aktuelle Status-Quo in Sachen Lernen und Online-Hilfe erläutert. Darauf aufbauend wird erklärt, was genau Adaptiv für unsere Arbeit bedeutet und worauf wir unseren Schwerpunkt beziehen. Zur besseren Einführung in die Thematik werden die Nutzer und deren Probleme in Form von Personas vorgestellt. Diese Nutzer werden anschließend Klassifiziert, damit bessere Lösungsansätze gefunden werden können. Anhand der Klassifizierung werden wir unsere Lösungsansätze vorstellen, diese kritisch bewerten und eine anschließende Empfehlung daraus generieren. Zum Abschluss der Arbeit möchten wir ein kleines Fazit mit Ausblick auf ein weiteres Vorgehen bei der Arbeit geben.
